Attempt to fix text overflow in tabular trip entry

--- a/apps/dpnk/static/less/style.less
+++ b/apps/dpnk/static/less/style.less
@@ -340,11 +340,15 @@ label{
   .controls{
     width:100%;
   }
-  .btn-group{
-    display:block;
+  @media (min-device-width: 500px) {
+      .btn-group{
+          display:block;
+      }
+      .radio{
+          width:50%;
+      }
   }
   .radio{
-    width:50%;
     padding:0;
     border:1px solid #fff;
     input{
